Calor Ofertas Metropolitana

--- a/scripts/src/seguridad/preproceso_seguridad.ipynb
+++ b/scripts/src/seguridad/preproceso_seguridad.ipynb
@@ -10,7 +10,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Datos de seguridad ciudadana (INE) cargados\n"
+      "Datos de seguridad ciudadana (INE) cargados\n",
+      "Filas restantes después de eliminar nulos en P_AUMENTO_COM: 49813\n"
      ]
     }
    ],
@@ -30,7 +31,13 @@
     "df = df[['rph_ID','idhogar','enc_region',\n",
     "         'enc_rpc','P_AUMENTO_COM','P_INSEG_LUGARES_14',\n",
     "         'SCREEN_INT_RDV','SCREEN_INT_RFV','SCREEN_INT_RVI',\n",
-    "         'SCREEN_ROB_HUR']]\n"
+    "         'SCREEN_ROB_HUR']]\n",
+    "\n",
+    "# Eliminar filas donde P_AUMENTO_COM tenga valores nulos\n",
+    "df = df.dropna(subset=['P_AUMENTO_COM'])\n",
+    "\n",
+    "# Verificar el resultado\n",
+    "print(f\"Filas restantes después de eliminar nulos en P_AUMENTO_COM: {len(df)}\")"
    ]
   },
   {
