--- a/src/AnalisisSeguridad.ipynb
+++ b/src/AnalisisSeguridad.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 37,
    "id": "7f0ea523",
    "metadata": {},
    "outputs": [
@@ -147,9 +147,13 @@
     "import os\n",
     "import dotenv\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "import geopandas as gpd\n",
-    "import matplotlib as plt\n",
+    "import matplotlib\n",
     "import matplotlib.pyplot as pltgr\n",
+    "import ipywidgets as ipw\n",
+    "from IPython.display import display\n",
+    "import functools\n",
     "from matplotlib.patches import Patch\n",
     "\n",
     "dotenv.load_dotenv()\n",
@@ -164,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 38,
    "id": "aa0b0c99",
    "metadata": {},
    "outputs": [
@@ -225,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 39,
    "id": "fa883b75",
    "metadata": {},
    "outputs": [
@@ -583,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 40,
    "id": "6791cf06",
    "metadata": {},
    "outputs": [
@@ -623,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 41,
    "id": "f585ad80",
    "metadata": {},
    "outputs": [
@@ -682,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 42,
    "id": "751fbc70",
    "metadata": {},
    "outputs": [
@@ -738,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 43,
    "id": "c1420377",
    "metadata": {},
    "outputs": [
@@ -787,6 +791,423 @@
     "pltgr.grid(axis='x', linestyle='--', alpha=0.7)\n",
     "pltgr.tight_layout()\n",
     "pltgr.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "76a037de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getColumnToDim(df, columnName):\n",
+    "    dfAux = df.groupby([columnName]).size().reset_index(name = 'COUNT')\n",
+    "    resp=dfAux[columnName].to_numpy()\n",
+    "    resp = np.append(resp,\"TODO\")\n",
+    "    return resp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "407837cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def grafico_inseguridad_regiones(top=10):\n",
+    "    \n",
+    "    inseguridad_por_region = (\n",
+    "        df.groupby('enc_region')['P_AUMENTO_COM']\n",
+    "        .apply(lambda x: (x == 1).mean() * 100)  # porcentaje de personas que dijeron \"aumentó\"\n",
+    "        .reset_index(name='Porcentaje_Aumento')\n",
+    "    )\n",
+    "\n",
+    "    inseguridad_por_region.columns = ['Region', 'Porcentaje']\n",
+    "    # Definir el orden de las regiones de norte a sur\n",
+    "\n",
+    "    orden_regiones = [\n",
+    "        'Arica y Parinacota', 'Tarapacá', 'Antofagasta', 'Atacama', 'Coquimbo',\n",
+    "        'Valparaiso', 'Metropolitana', \"O'higgins\", 'Maule', 'Ñuble', 'Biobío', 'La Araucanía',\n",
+    "        'Los Ríos', 'Los Lagos', 'Aysén', 'Magallanes'\n",
+    "    ]\n",
+    "\n",
+    "    # Aplicar el orden personalizado al DataFrame\n",
+    "    inseguridad_por_region['Region'] = pd.Categorical(\n",
+    "        inseguridad_por_region['Region'], categories=orden_regiones, ordered=True\n",
+    "    )\n",
+    "\n",
+    "    # Ordenar el DataFrame según el orden de las regiones\n",
+    "    inseguridad_por_region = inseguridad_por_region.sort_values('Region')\n",
+    "    \n",
+    "    inseguridad_por_region = inseguridad_por_region.head(top)\n",
+    "\n",
+    "    pltgr.figure(figsize=(12, 8))\n",
+    "    pltgr.barh(inseguridad_por_region['Region'], inseguridad_por_region['Porcentaje'], color='tomato')\n",
+    "    pltgr.xlabel('Porcentaje que percibe aumento de delincuencia')\n",
+    "    pltgr.title('Percepción de Inseguridad por Región (ENUSC 2023)')\n",
+    "    pltgr.gca().invert_yaxis()  # Región con mayor porcentaje arriba\n",
+    "    pltgr.grid(axis='x', linestyle='--', alpha=0.7)\n",
+    "    pltgr.tight_layout()\n",
+    "    pltgr.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "2259d73c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def grafico_robos_regiones(top=10):\n",
+    "    \n",
+    "    robo_por_region = (\n",
+    "        df.groupby('enc_region')['SCREEN_INT_RFV']\n",
+    "        .apply(lambda x: (x == 1).mean() * 100)  # porcentaje de personas que dijeron \"aumentó\"\n",
+    "        .reset_index(name='Porcentaje')\n",
+    "    )\n",
+    "\n",
+    "    robo_por_region.columns = ['Region', 'Porcentaje']\n",
+    "    # Definir el orden de las regiones de norte a sur\n",
+    "\n",
+    "    orden_regiones = [\n",
+    "        'Arica y Parinacota', 'Tarapacá', 'Antofagasta', 'Atacama', 'Coquimbo',\n",
+    "        'Valparaiso', 'Metropolitana', \"O'higgins\", 'Maule', 'Ñuble', 'Biobío', 'La Araucanía',\n",
+    "        'Los Ríos', 'Los Lagos', 'Aysén', 'Magallanes'\n",
+    "    ]\n",
+    "\n",
+    "    # Aplicar el orden personalizado al DataFrame\n",
+    "    robo_por_region['Region'] = pd.Categorical(\n",
+    "        robo_por_region['Region'], categories=orden_regiones, ordered=True\n",
+    "    )\n",
+    "\n",
+    "    # Ordenar el DataFrame según el orden de las regiones\n",
+    "    robo_por_region = robo_por_region.sort_values('Region')\n",
+    "    \n",
+    "    robo_por_region = robo_por_region.head(top)\n",
+    "\n",
+    "    pltgr.figure(figsize=(12, 8))\n",
+    "    pltgr.barh(robo_por_region['Region'], robo_por_region['Porcentaje'], color='tomato')\n",
+    "    pltgr.xlabel('Porcentaje robos en viviendas')\n",
+    "    pltgr.title(f'Porcentaje robos en viviendas por Región (ENUSC 2023)')\n",
+    "    pltgr.gca().invert_yaxis()  # Región con mayor porcentaje arriba\n",
+    "    pltgr.grid(axis='x', linestyle='--', alpha=0.7)\n",
+    "    pltgr.tight_layout()\n",
+    "    pltgr.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "15541d89",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def grafico_inseguridad_comunas(top=10):\n",
+    "    robos_por_comuna = (\n",
+    "        df.groupby('enc_rpc')['SCREEN_INT_RFV']\n",
+    "        .apply(lambda x: (x == 1).mean() * 100)\n",
+    "        .reset_index(name='Porcentaje')\n",
+    "    )\n",
+    "\n",
+    "    robos_por_comuna.columns = ['Comuna', 'Porcentaje']\n",
+    "    # Ordenar de mayor a menor porcentaje\n",
+    "    robos_por_comuna = robos_por_comuna.sort_values('Porcentaje', ascending=False)\n",
+    "    # Seleccionar solo las primeras 'top' comunas\n",
+    "    robos_por_comuna = robos_por_comuna.head(top)\n",
+    "\n",
+    "    pltgr.figure(figsize=(12, 8))\n",
+    "    pltgr.barh(robos_por_comuna['Comuna'], robos_por_comuna['Porcentaje'], color='tomato')\n",
+    "    pltgr.xlabel('Porcentaje que percibe aumento de delincuencia')\n",
+    "    pltgr.title(f'Top {top} comunas con mayor percepción de inseguridad (ENUSC 2023)')\n",
+    "    pltgr.gca().invert_yaxis()  # Comuna con mayor porcentaje arriba\n",
+    "    pltgr.grid(axis='x', linestyle='--', alpha=0.7)\n",
+    "    pltgr.tight_layout()\n",
+    "    pltgr.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "a73b01b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def grafico_robos_comunas(top=10):\n",
+    "    inseguridad_por_comuna = (\n",
+    "        df.groupby('enc_rpc')['P_AUMENTO_COM']\n",
+    "        .apply(lambda x: (x == 1).mean() * 100)\n",
+    "        .reset_index(name='Porcentaje_robos')\n",
+    "    )\n",
+    "\n",
+    "    inseguridad_por_comuna.columns = ['Comuna', 'Porcentaje']\n",
+    "    # Ordenar de mayor a menor porcentaje\n",
+    "    inseguridad_por_comuna = inseguridad_por_comuna.sort_values('Porcentaje', ascending=False)\n",
+    "    # Seleccionar solo las primeras 'top' comunas\n",
+    "    inseguridad_por_comuna = inseguridad_por_comuna.head(top)\n",
+    "\n",
+    "    pltgr.figure(figsize=(12, 8))\n",
+    "    pltgr.barh(inseguridad_por_comuna['Comuna'], inseguridad_por_comuna['Porcentaje'], color='tomato')\n",
+    "    pltgr.xlabel('Porcentaje de robos en viviendas')\n",
+    "    pltgr.title(f'Top {top} comunas con mayor porcentaje de robos en viviendas (ENUSC 2023)')\n",
+    "    pltgr.gca().invert_yaxis()  # Comuna con mayor porcentaje arriba\n",
+    "    pltgr.grid(axis='x', linestyle='--', alpha=0.7)\n",
+    "    pltgr.tight_layout()\n",
+    "    pltgr.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "fd751f1a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def region_a_num (region):\n",
+    "    if region == 'Tarapacá':\n",
+    "        return 1\n",
+    "    elif region == 'Antofagasta':\n",
+    "        return 2\n",
+    "    elif region == 'Atacama':\n",
+    "        return 3\n",
+    "    elif region == 'Coquimbo':\n",
+    "        return 4\n",
+    "    elif region == 'Valparaiso':\n",
+    "        return 5\n",
+    "    elif region == \"O'higgins\":\n",
+    "        return 6\n",
+    "    elif region == 'Maule':\n",
+    "        return 7\n",
+    "    elif region == 'Biobío':\n",
+    "        return 8\n",
+    "    elif region == 'La Araucanía':\n",
+    "        return 9\n",
+    "    elif region == 'Los Lagos':\n",
+    "        return 10\n",
+    "    elif region == 'Aysén':\n",
+    "        return 11\n",
+    "    elif region == 'Magallanes':\n",
+    "        return 12\n",
+    "    elif region == 'Metropolitana':\n",
+    "        return 13\n",
+    "    elif region == 'Los Ríos':\n",
+    "        return 14\n",
+    "    elif region == 'Arica y Parinacota':\n",
+    "        return 15\n",
+    "    elif region == 'Ñuble':\n",
+    "        return 16\n",
+    "    else:\n",
+    "        return 'Otros'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "61db5bd8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mapa_calor_inseguridad (Región):\n",
+    "    try:\n",
+    "        df= pd.read_csv(path_csv,sep=\",\",encoding=\"utf-8\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"error :{e}\")\n",
+    "\n",
+    "    num_region = region_a_num (Región)\n",
+    "\n",
+    "    \n",
+    "    gdf_comunas = gpd.read_file(f'/home/tole/PrograCientifica/analisisOfertasLab/scripts/data/geo/{num_region}.geojson')\n",
+    "\n",
+    "    df['P_AUMENTO_COM'] = df['P_AUMENTO_COM'].fillna(0)\n",
+    "    df_filtrado_comunas = df[df['P_AUMENTO_COM'].isin([1, 2, 3])]\n",
+    "    \n",
+    "    inseguridad = (df_filtrado_comunas.groupby('enc_rpc')['P_AUMENTO_COM']\n",
+    "        .apply(lambda x: (x == 1).mean() * 100)\n",
+    "        .reset_index(name='perc_aumento')\n",
+    "    )\n",
+    "    \n",
+    "    gdf_comunas['enc_rpc'] = gdf_comunas['cod_comuna'].astype(int)\n",
+    "    gdf_mapa = gdf_comunas.merge(inseguridad, on='enc_rpc', how='left')\n",
+    "    \n",
+    "    fig, ax = pltgr.subplots(figsize=(10, 7))\n",
+    "    gdf_mapa.plot(\n",
+    "        column='perc_aumento',\n",
+    "        cmap='Reds',\n",
+    "        linewidth=0.8,\n",
+    "        ax=ax,\n",
+    "        edgecolor='0.8',\n",
+    "        legend=True,\n",
+    "        legend_kwds={\n",
+    "            'label': \"Porcentaje de percepción de aumento de delincuencia\",\n",
+    "            'orientation': \"vertical\"\n",
+    "        },\n",
+    "        missing_kwds={ \n",
+    "            \"color\": \"white\",  \n",
+    "            \"edgecolor\": \"gray\",  \n",
+    "            \"hatch\": \"///\",  \n",
+    "            \"label\": \"Sin datos\"\n",
+    "        }\n",
+    "    )\n",
+    "    ax.set_title('Percepción de aumento de delincuencia por comuna - RM (ENUSC 2023)', fontsize=14)\n",
+    "    \n",
+    "    # Agregar manualmente la leyenda para las comunas sin datos\n",
+    "    sin_datos_patch = Patch(facecolor='white', edgecolor='gray', hatch='///', label='Sin datos')\n",
+    "    ax.legend(handles=[sin_datos_patch], loc='lower left', fontsize=10)\n",
+    "    \n",
+    "    ax.axis('off')\n",
+    "    pltgr.tight_layout()\n",
+    "    pltgr.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "28252d22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mapa_calor_robos(Región):\n",
+    "    try:\n",
+    "        df= pd.read_csv(path_csv,sep=\",\",encoding=\"utf-8\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"error :{e}\")\n",
+    "\n",
+    "    num_region = region_a_num (Región)\n",
+    "\n",
+    "    \n",
+    "    gdf_comunas = gpd.read_file(f'/home/tole/PrograCientifica/analisisOfertasLab/scripts/data/geo/{num_region}.geojson')\n",
+    "\n",
+    "    df['SCREEN_INT_RFV'] = df['SCREEN_INT_RFV'].fillna(0)\n",
+    "    df_filtrado_comunas = df[df['SCREEN_INT_RFV'].isin([1, 2, 3])]\n",
+    "    \n",
+    "    robos = (df_filtrado_comunas.groupby('enc_rpc')['SCREEN_INT_RFV']\n",
+    "        .apply(lambda x: (x == 1).mean() * 100)\n",
+    "        .reset_index(name='porcentaje_robos')\n",
+    "    )\n",
+    "    \n",
+    "    gdf_comunas['enc_rpc'] = gdf_comunas['cod_comuna'].astype(int)\n",
+    "    gdf_mapa = gdf_comunas.merge(robos, on='enc_rpc', how='left')\n",
+    "    \n",
+    "    fig, ax = pltgr.subplots(figsize=(10, 7))\n",
+    "    gdf_mapa.plot(\n",
+    "        column='porcentaje_robos',\n",
+    "        cmap='Reds',\n",
+    "        linewidth=0.8,\n",
+    "        ax=ax,\n",
+    "        edgecolor='0.8',\n",
+    "        legend=True,\n",
+    "        legend_kwds={\n",
+    "            'label': \"Porcentaje de percepción de aumento de delincuencia\",\n",
+    "            'orientation': \"vertical\"\n",
+    "        },\n",
+    "        missing_kwds={ \n",
+    "            \"color\": \"white\",  \n",
+    "            \"edgecolor\": \"gray\",  \n",
+    "            \"hatch\": \"///\",  \n",
+    "            \"label\": \"Sin datos\"\n",
+    "        }\n",
+    "    )\n",
+    "    ax.set_title('Percepción de aumento de delincuencia por comuna - RM (ENUSC 2023)', fontsize=14)\n",
+    "    \n",
+    "    # Agregar manualmente la leyenda para las comunas sin datos\n",
+    "    sin_datos_patch = Patch(facecolor='white', edgecolor='gray', hatch='///', label='Sin datos')\n",
+    "    ax.legend(handles=[sin_datos_patch], loc='lower left', fontsize=10)\n",
+    "    \n",
+    "    ax.axis('off')\n",
+    "    pltgr.tight_layout()\n",
+    "    pltgr.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "86c3db01",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def region_o_comuna (eleccion, tipo, top):\n",
+    "    if eleccion == 'Región' and tipo == 'Aumento Delincuencia':\n",
+    "        return grafico_inseguridad_regiones(top)\n",
+    "    elif eleccion == 'Comuna' and tipo == 'Aumento Delincuencia':\n",
+    "        return grafico_inseguridad_comunas(top)\n",
+    "    elif eleccion == 'Región' and tipo == 'Robos en Viviendas':\n",
+    "        return grafico_robos_regiones(top)\n",
+    "    elif eleccion == 'Comuna' and tipo == 'Robos en Viviendas':\n",
+    "        return grafico_robos_comunas(top)\n",
+    "    else:\n",
+    "        return None\n",
+    "    \n",
+    "def calor_inseguridad_o_robos(tipo, region):\n",
+    "    if tipo == 'Aumento Delincuencia':\n",
+    "        return mapa_calor_inseguridad(region)\n",
+    "    elif tipo == 'Robos en Viviendas':\n",
+    "        return mapa_calor_robos(region)\n",
+    "    else:\n",
+    "        return None\n",
+    "\n",
+    "Region = getColumnToDim(df, 'enc_region')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a569b57",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Selectores para los gráficos de barra\n",
+    "selector_graficos = ipw.RadioButtons(options=['Robos en Viviendas', 'Aumento Delincuencia'],\n",
+    "                                     description='Tipo de gráfico:',\n",
+    "                                     style={'description_width': 'initial'})\n",
+    "selector_tipo = ipw.Dropdown(options=['Región', 'Comuna'], description='Ver por:')\n",
+    "selector_top = ipw.IntSlider(value=16, min=1, max=20, step=1, description='Top N:')\n",
+    "\n",
+    "out = ipw.interactive_output(region_o_comuna, {'eleccion': selector_tipo, \n",
+    "                                               'tipo':selector_graficos ,\n",
+    "                                               'top': selector_top})\n",
+    "\n",
+    "interact_eleccion = ipw.VBox([ipw.HBox([selector_tipo, selector_top]), out])\n",
+    "\n",
+    "#Selectores para el mapa de calor\n",
+    "selector_enfoque = ipw.Dropdown(options=Region, \n",
+    "                                description='Región Enfoque:',\n",
+    "                                style={'description_width': 'initial'},)\n",
+    "out_calor = ipw.interactive_output(calor_inseguridad_o_robos, {'tipo':selector_graficos,\n",
+    "                                                               'region': selector_enfoque})\n",
+    "interact_mapa_calor_inseguridad = ipw.VBox([selector_enfoque, out_calor])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "fc500194",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "663a96f3d658416d95ef8448e4bc6d38",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(VBox(children=(HTML(value='<h2>Filtrar Por</h2>'), VBox(children=(RadioButtons(description='Tip…"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "title_tab_seguridad1 = ipw.HTML(value = \"<h2>Filtrar Por</h2>\")\n",
+    "title_tab_seguridad2 = ipw.HTML(value = \"<h2>Cantidad Regiones</h2>\")\n",
+    "title_tab_seguridad3 = ipw.HTML(value = \"<h2>Región Enfoque</h2>\")\n",
+    "\n",
+    "tab_seguridad = ipw.HBox([ipw.VBox([title_tab_seguridad1, ipw.VBox([selector_graficos])]),\n",
+    "                        ipw.VBox([title_tab_seguridad2, ipw.VBox(interact_eleccion.children)]),\n",
+    "                        ipw.VBox([title_tab_seguridad3, ipw.VBox(interact_mapa_calor_inseguridad.children)])\n",
+    "])\n",
+    "tab_seguridad"
    ]
   }
  ],
